--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
