--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "dev-type-spotify",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.17.1",
-    "bootstrap": "4.0.0",
-    "lodash": "^4.17.5",
-    "query-string": "^5.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-beta"
-  },
+  "name": "oauth-bridge-template",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"npm:server\" \"npm:client\"",
+    "client": "cd client && npm i && npm start",
+    "server": "node server.js"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "concurrently": "^4.1.0",
+    "express": "^4.16.4",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
