Refactoring App.js and organizing subcomponents

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "dev-type-spotify",
+  "name": "react-spotify-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/login": {
+      "target": "http://localhost:8888/"
+    }
+  },
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^4.1.3",
