--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oauth-bridge-template",
+  "name": "react-spotify-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "concurrently \"npm:server\" \"npm:client\"",
     "client": "cd client && npm i && npm start",
