--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,16 @@ version: '3'
 
 services:
   react-spotify:
+    container_name: react-spotify
     image: tazoo/react-spotify
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     # environment:
       # NODE_ENV: production
     ports:
       - "3000:3000"
+      - "8888:8888"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
