--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^2.1.1",
-    "reactstrap": "^5.0.0-beta"
+    "reactstrap": "^5.0.0-beta",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
