--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-spotify-server",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "10.12.0"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "concurrently \"npm:server\" \"npm:client\"",
